# wgpu-tutorial

./: Cargo.toml  README.md
example_01_triangle/: Cargo.toml
example_01_triangle/src/: main.rs  triangle.wgsl
example_02_buffer/: Cargo.toml
example_02_buffer/src/: main.rs
example_03_obj/: Cargo.toml
example_03_obj/src/: main.rs  obj.wgsl  triangle.wgsl
example_04_depth/: Cargo.toml
example_04_depth/src/: main.rs  obj.wgsl
example_05_camera/: Cargo.toml
example_05_camera/src/: camera.wgsl  main.rs
example_06_gol/: Cargo.toml
example_06_gol/src/: game_of_life.wgsl  main.rs
src/: main.rs
