[package]
name = "wgpu-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.1" # Rust library for WebGPU
pollster = "0.3.0" # Simplest dep for async main
image = { version = "0.24.8", default-features = false, features = ["png"] }
oneshot = "0.1.6"
